--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@vectopus/atlas-icons-vue": "^0.0.5",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
